--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "api-express-types",
+  "name": "@now-inc/api-express-types",
   "main": "src/index.ts",
   "version": "1.0.0",
   "private": true,
   "dependencies": {
-    "express": "^4.16.4",
-    "@types/express": "4.0.33"
+    "@types/express": "^4.16.0",
+    "express": "^4.16.4"
   },
   "devDependencies": {},
   "engines": {
