--- a/package.json
+++ b/package.json
@@ -1,13 +1,20 @@
 {
   "name": "@now-inc/api-express-types",
-  "main": "src/index.ts",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
+  "scripts": {
+    "prepublish": "npm run build",
+    "build": "tsc"
+  },
   "version": "1.0.0",
   "private": true,
   "dependencies": {
     "@types/express": "^4.16.0",
     "express": "^4.16.4"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "typescript": "^3.1.6"
+  },
   "engines": {
     "node": "8.9.4"
   }
